Add 'codelight' prefix in plugin name in composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "codelight-eu/wp-cleanup",
+  "name": "codelight-eu/codelight-wp-cleanup",
   "description": "Remove various unneeded functionality from your WP installation.",
   "keywords": ["wordpress", "plugin"],
   "homepage": "http://codelight.eu",
